--- a/notebooks/master/Jet_Substructure.ipynb
+++ b/notebooks/master/Jet_Substructure.ipynb
@@ -256,7 +256,7 @@
    "source": [
     "What can you say about the two histograms? Is $\\tau_{21}$ telling you something about the nature of the boosted jets selected?\n",
     "\n",
-    "Let's compare now $\\tau_{32}$. Modify the function call in the script and change the pdf file name if you don't want to overwrite the plot from the previous step."
+    "Let's compare now $\\tau_{32}$. Modify the function call in the script and produce plots with the two following configurations:"
    ]
   },
   {
@@ -283,7 +283,7 @@
    "source": [
     "What can you say about the two histograms? Is $\\tau_{32}$ telling you something about the nature of the boosted jets selected?\n",
     "\n",
-    "Another subtructure variable commonly used is the energy correlation function $N2$. Similarly than $\\tau_{21}$, $N2$ tests if the boosted jet is compatible with a 2-prong jet hypothesis. Let's compare now $N2$ and $N3$:"
+    "Another subtructure variable commonly used is the energy correlation function $N2$. Similarly than $\\tau_{21}$, $N2$ tests if the boosted jet is compatible with a 2-prong jet hypothesis. Let's compare now $N2$ and $N3$. Follow the above process with these:"
    ]
   },
   {
@@ -321,6 +321,7 @@
     "$\\rho=\\log(m^2/(p_{\\mathrm{T}}R)^2)$.\n",
     "\n",
     "(Sometimes $\\rho$ is defined without the log). One useful feature of this variable is that QCD jet mass grows with $p_{\\mathrm{T}}$, i.e. the two quantities are strongly correlated, while $\\rho$ is much less correlated with $p_{\\mathrm{T}}$.\n",
+    "Repeat the above plotting process with these two function calls and open the plots:",
     "\n"
    ]
   },
@@ -331,7 +332,7 @@
    "outputs": [],
    "source": [
     "compareHistogram( 'logrhoRatioAK8' )\n",
-    "#compareHistogram( 'rhoRatioAK8' )"
+    "compareHistogram( 'rhoRatioAK8' )"
    ]
   },
   {
