--- a/notebooks/master/W_and_Top_Tagging.ipynb
+++ b/notebooks/master/W_and_Top_Tagging.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "In this part of the tutorial, we will look at how different substructure algorithms can be used to identify jets originating from boosted W's and tops. Specifically, we'll see how these identification tools are used to separate these boosted jets from those originating from Standard Model QCD, a dominant process at the LHC.\n",
     "\n",
-    "Run the following two cells to produce the relevant histograms from the SM ttbar, RS KK gluon, and QCD samples. It may take a few minutes - go ahead a grab a coffee while it runs."
+    "Run the following commands to produce the relevant histogram files from the SM ttbar, RS KK gluon, and QCD samples. It may take a few minutes - go ahead a grab a coffee while it runs."
    ]
   },
   {
@@ -17,7 +17,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
     "python $CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_make_histograms.py --files=$CMSSW_BASE/src/Analysis/JMEDAS/data/MiniAODs/RunIIFall17MiniAODv2/ttjets.txt --outname=$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/ttjets.root --maxevents=2000 --maxFiles 10 --maxjets=6\n",
     "python $CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_make_histograms.py --files=$CMSSW_BASE/src/Analysis/JMEDAS/data/MiniAODs/RunIIFall17MiniAODv2/rsgluon_ttbar_3000GeV.txt --outname=$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/rsgluon_ttbar_3TeV.root --maxevents=2000 --maxFiles 10 --maxjets=6\n",
     "python $CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_make_histograms.py --files=$CMSSW_BASE/src/Analysis/JMEDAS/data/MiniAODs/RunIIFall17MiniAODv2/QCD_Pt_300to470.txt --outname=$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/QCD_Pt_300to470.root --maxevents=2000 --maxFiles 10 --maxjets=6"
@@ -31,17 +30,8 @@
     "\n",
     "We will now investigate how to identify W bosons using the substructure techniques we've learned. \n",
     "\n",
-    "Compare the tau2 / tau1 ratio for the AK8 jets from Standard Model top quarks to those from the QCD sample:\n",
-    "\n",
-    "(Notice that this plot is interactive. Click on it or move your mouse to zoom in or out. All other plots will be similarly interactive.)\n",
-    "<details>\n",
-    "<summary>\n",
-    "    <font color='blue'>Show answer...</font>\n",
-    "</summary>\n",
-    "The plot should look like this:\n",
-    "\n",
-    "<img src=\"..//files/ak8tau21_topvqcd.png\" width=400px/>\n",
-    "</details>"
+    "Compare the tau2 / tau1 ratio for the AK8 jets from Standard Model top quarks to those from the QCD sample using the below script 'W_tagging_part1.py.",
+    "\n"
    ]
   },
   {
@@ -81,6 +71,15 @@
     "h_tau21AK8_2.Draw(\"same hist\")\n",
     "leg.Draw()\n",
     "c_tau21.Draw()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The plot should look like this:\n",
+    "\n",
+    "<img src=\"..//files/ak8tau21_topvqcd.png\" width=400px/>\n"
    ]
   },
   {
