--- a/notebooks/master/W_and_Top_Tagging.ipynb
+++ b/notebooks/master/W_and_Top_Tagging.ipynb
@@ -43,7 +43,6 @@
    "outputs": [],
    "source": [
     "import ROOT\n",
-    "%jsroot on\n",
     "\n",
     "f1 = ROOT.TFile(\"$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/ttjets.root\")\n",
     "f2 = ROOT.TFile(\"$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/QCD_Pt_300to470.root\")\n",
@@ -86,15 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now compare with the energy correlation function, N2b1:\n",
-    "<details>\n",
-    "<summary>\n",
-    "    <font color='blue'>Show answer...</font>\n",
-    "</summary>\n",
-    "The plot should look like this:\n",
-    "\n",
-    "<img src=\"..//files/ak8N2b1_topvqcd.png\" width=400px/>\n",
-    "</details>"
+    "Now compare with the energy correlation function, N2b1, with W_tagging_part2.py:\n"
    ]
   },
   {
@@ -104,7 +95,6 @@
    "outputs": [],
    "source": [
     "import ROOT\n",
-    "%jsroot\n",
     "\n",
     "f1 = ROOT.TFile(\"$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/ttjets.root\")\n",
     "f2 = ROOT.TFile(\"$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/QCD_Pt_300to470.root\")\n",
@@ -132,6 +122,15 @@
     "h_ak8_N2_beta1_2.Draw(\"same hist\")\n",
     "leg.Draw()\n",
     "c_n2.Draw()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The plot should look like this:\n",
+    "\n",
+    "<img src=\"..//files/ak8N2b1_topvqcd.png\" width=400px/>\n"
    ]
   },
   {
