--- a/notebooks/master/W_and_Top_Tagging.ipynb
+++ b/notebooks/master/W_and_Top_Tagging.ipynb
@@ -152,15 +152,7 @@
     "\n",
     "We will now investigate how to identify top quarks using the substructure techniques we've learned.\n",
     "\n",
-    "Compare the tau3/ tau2 ratio for the boosted top quarks from the RS KK gluon sample, and the jets from the QCD sample:\n",
-    "<details>\n",
-    "<summary>\n",
-    "    <font color='blue'>Show answer...</font>\n",
-    "</summary>\n",
-    "The plot should look like this:\n",
-    "\n",
-    "<img src=\"../files/ak8tau32_topvqcd.png\" width=400px/>\n",
-    "</details>"
+    "Compare the tau3/ tau2 ratio for the boosted top quarks from the RS KK gluon sample, and the jets from the QCD sample using the T_tagging_part1.py script.\n"
    ]
   },
   {
@@ -205,15 +197,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now compare the energy correlation function N3b1:\n",
-    "<details>\n",
-    "<summary>\n",
-    "    <font color='blue'>Show answer...</font>\n",
-    "</summary>\n",
     "The plot should look like this:\n",
     "\n",
-    "<img src=\"../files/ak8N3b1_topvqcd.png\" width=400px/>\n",
-    "</details>"
+    "<img src=\"../files/ak8tau32_topvqcd.png\" width=400px/>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now compare the energy correlation function N3b1 with T_tagging_part2.py:\n",
    ]
   },
   {
@@ -250,6 +243,15 @@
     "h_ak8_N3_beta1_2    .Draw(\"same hist\")\n",
     "leg.Draw()\n",
     "c_n3.Draw()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The plot should look like this:\n",
+    "\n",
+    "<img src=\"../files/ak8N3b1_topvqcd.png\" width=400px/>\n"
    ]
   },
   {
