--- a/notebooks/master/W_and_Top_Tagging.ipynb
+++ b/notebooks/master/W_and_Top_Tagging.ipynb
@@ -206,7 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now compare the energy correlation function N3b1 with T_tagging_part2.py:\n",
+    "Now compare the energy correlation function N3b1 with T_tagging_part2.py:\n"
    ]
   },
   {
