Edit jet mass exercise

--- a/notebooks/master/W_and_Top_Tagging.ipynb
+++ b/notebooks/master/W_and_Top_Tagging.ipynb
@@ -271,14 +271,7 @@
     "# Jet Mass\n",
     "\n",
     "We can also use jet mass to distinguish our boosted W and top jets from QCD. Let's compare the AK8 jet mass of the boosted top quarks from the RS KK sample and the jets from the QCD sample. Let's also look at the ungroomed jet mass (labeled as CHS) and the softdrop groomed jet mass combined with the PUPPI pileup subtraction algorithm.\n",
-    "<details>\n",
-    "<summary>\n",
-    "    <font color='blue'>Show answer...</font>\n",
-    "</summary>\n",
-    "The plot should look like this:\n",
-    "\n",
-    "<img src=\"../files/ak8jetmass_topvqcd.png\" width=400px/>\n",
-    "</details>"
+    "Execute the following jet_mass.py script in terminal and open the plot."
    ]
   },
   {
@@ -329,6 +322,15 @@
     "\n",
     "leg.Draw()\n",
     "c_puppimass.Draw()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The plot should look like this:\n",
+    "\n",
+    "<img src=\"../files/ak8jetmass_topvqcd.png\" width=400px/>\n"
    ]
   },
   {
