Edit jetToolBox instructions as the commands do not work

--- a/notebooks/master/Jets_in_CMS.ipynb
+++ b/notebooks/master/Jets_in_CMS.ipynb
@@ -167,7 +167,7 @@
    "metadata": {},
    "source": [
     "### jetToolbox *For reading only*\n",
-    "## The example commands given in this part do not work at the moment, so please just read the below descriptions and remember that maybe in the future jetToolBox can be useful to you!\n",
+    "#### The example commands given in this part do not work at the moment, so please just read the below descriptions and remember that maybe in the future jetToolBox can be useful to you!\n",
     "\n",
     "Although JME generally recommends to use AK4 CHS and AK8 PUPPI jets for Run II analyses (moving fully to AK4 PUPPI jets for Run III), there are cases where certain analysis will need to use something else. Similar for the standard algorithms stored in mini/nanoAOD samples. For users who want to test a different jet collection or algorithms, JetMET had developed a user-friendly tool to compute them: [JetToolbox](https://twiki.cern.ch/twiki/bin/view/CMS/JetToolbox).\n",
     "\n",
