--- a/_episodes/01-jets101.md
+++ b/_episodes/01-jets101.md
@@ -51,7 +51,7 @@ This preliminary exercise will illustrate some of the basic properties of jets, 
 > Did you plot other jet quantities stored in nanoAOD? Do you understand the meaning of them?
 {: .discussion}
 
-## # Jet Types and Algorithms
+## Jet Types and Algorithms
 
 The jet algorithms take as input a set of 4-vectors. At CMS, the most popular jet type is the "Particle Flow Jet", which attempts to use the entire detector at once and derive single four-vectors representing specific particles.For this reason it is very comparable (ideally) to clustering generator-level four-vectors also.
 
@@ -96,7 +96,7 @@ In CMS, CaloJets are used less often than PFJets. Examples of their use include 
 The majority of jet algorithms at CMS use a so-called "clustering sequence". This is essentially a pairwise examination of the input four-vectors. If the pair satisfy some criteria, they are merged. The process is repeated until the entire list of constituents is exhausted. In addition, there are several ways to determine the "area" of the jet over which the input constituents lay. This is very important in correcting for pileup, as we will see, because some algorithms tend to "consume" more constituents than others and hence are more susceptible to pileup. Furthermore, the amount of energy that is inside of a jet due to pileup is proportional to the area, so to correct for this effect it is very important to know the jet area.
 
 > ## Figure 1.1
-> <img src="../fig/JHEP04_2008_063.jpg" alt="" style="width: 600px;"/>
+> <img src="fig/JHEP04_2008_063.jpg" alt="" style="width: 600px;"/>
 > Comparison of jet areas for four different jet algorithms, from "The anti-kt Clustering Algorithm" by Cacciari, Salam, and Soyez [JHEP04, 063 (2008), arXiv:0802.1189].
 {: .callout}
 
@@ -136,7 +136,7 @@ Some excellent references about jet algorithms can be found here:
 
 In order to avoid using fake jets, which can originate from a hot calorimeter cell or electronic read-out box, we need to require some basic quality criteria for jets. These criteria are collectively called "jet ID". Details on the jet ID for PFJets can be found in the following twiki:
 
-https://twiki.cern.ch/twiki/bin/viewauth/CMS/JetID
+[https://twiki.cern.ch/twiki/bin/viewauth/CMS/JetID](https://twiki.cern.ch/twiki/bin/viewauth/CMS/JetID)
 
 The JetMET POG recommends a single jet ID for most physics analysess in CMS, which corresponds to what used to be called the tight Jet ID. Some important observations from the above twiki:
 
