--- a/_episodes/01-jets101.md
+++ b/_episodes/01-jets101.md
@@ -96,7 +96,7 @@ In CMS, CaloJets are used less often than PFJets. Examples of their use include 
 The majority of jet algorithms at CMS use a so-called "clustering sequence". This is essentially a pairwise examination of the input four-vectors. If the pair satisfy some criteria, they are merged. The process is repeated until the entire list of constituents is exhausted. In addition, there are several ways to determine the "area" of the jet over which the input constituents lay. This is very important in correcting for pileup, as we will see, because some algorithms tend to "consume" more constituents than others and hence are more susceptible to pileup. Furthermore, the amount of energy that is inside of a jet due to pileup is proportional to the area, so to correct for this effect it is very important to know the jet area.
 
 > ## Figure 1.1
-> <img src="fig/JHEP04_2008_063.jpg" alt="" style="width: 600px;"/>
+> <img src="../fig/JHEP04_2008_063.jpg" alt="" style="width: 600px;"/>
 > Comparison of jet areas for four different jet algorithms, from "The anti-kt Clustering Algorithm" by Cacciari, Salam, and Soyez [JHEP04, 063 (2008), arXiv:0802.1189].
 {: .callout}
 
