--- a/_episodes/01-jets101.md
+++ b/_episodes/01-jets101.md
@@ -33,7 +33,7 @@ Full set of intro slides: Slides 1-24 (FIXME)
 
 > ## Open a notebook
 >
-> For the first part of this introduction open the notebook called `Basics.ipynb`.
+> For this part, open the notebook called `Jets_101.ipynb` and run Exercise 1.
 {: .checklist}
 
 This preliminary exercise will illustrate some of the basic properties of jets, like the four momentum quantiies: pt, eta, phi, mass.  We will use nanoAOD files, which are currently widely used with the CMS Collaborators. For more information about nanoAOD follow [this link](https://gitlab.cern.ch/cms-nanoAOD/nanoaod-doc/-/wikis/home). At the end of the notebook you will be able to see all the quantities stored in the `Jet` collection.
@@ -76,7 +76,7 @@ In CMS, CaloJets are used less often than PFJets. Examples of their use include 
 
 > ## Open a notebook
 >
-> For this part open the notebook called `Jet_Types_and_Algorithms.ipynb` and run the Exercise 1.
+> For this part, open the notebook called `Jets_101.ipynb` (if it is not opened) and run Exercise 2.
 {: .checklist}
 
 > ## Question 1.1
@@ -106,7 +106,7 @@ Some excellent references about jet algorithms can be found here:
 
 > ## Open a notebook
 >
-> For this part open the notebook called `Jet_Types_and_Algorithms.ipynb` and run the Exercise 2.
+> For this part, open the notebook called `Jets_101.ipynb` (if it is not opened) and run Exercise 3.
 {: .checklist}
 
 > ## Discussion 1.3
