--- a/_episodes/01-jets101.md
+++ b/_episodes/01-jets101.md
@@ -1,16 +1,18 @@
 ---
 title: "Jets 101"
-teaching: 0
-exercises: 0
+teaching: 1h30
+exercises: 3
 questions:
 - "What is a jet?"
 - "Are there different types of jets? What is a recluster algorithm?"
+- "Which types of jets do we use in CMS?"
 objectives:
 - "Learn about jets, their properties, types and reclustering algorithms."
 - "Learn about the difference between gen, calo, pfjet."
 keypoints:
 - "Jet is a physical object which represents hadronic showers that interact with our detectors. A jet is usually associated with the physical representation of quark and gluons, but they can be more than that depending of their origin and the algorithm used to define them."
 - "A jet is defined by its reclustering algorithm and their constituents. In current experiments, jets are reclusted using the anti-kt algorithm. Depending on their constituents, in CMS, we called jets reclustered from genparticles as GenJets, from calorimeter clusters as CaloJets, and from particle flow candidates as PFJets."
+- "Jets are stored in the different CMS data tiers (AOD, miniAOD, nanoAOD). The current recommendation in CMS is to use nanoAOD unless other variables are needed."
 ---
 
 Full set of intro slides: Slides 1-24 (FIXME)
